start with tooltip web c

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <script src="tooltip.js"></script>
 </head>
 <body>
+    <p><rn-tooltip>Web Components</rn-tooltip>are awesome!</p>
 </body>
 </html>
