adding shadow root

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="tooltip.js"></script>
 </head>
 <body>
-    <p><rn-tooltip>Web Components</rn-tooltip>are awesome!</p>
+    <p><rn-tooltip text="Web Components is a set of standards.">Web Components</rn-tooltip>are awesome!</p>
+    <rn-tooltip>Some extra text.</rn-tooltip>
 </body>
 </html>
