web component to confirm link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web Components</title>
     <script src="tooltip.js"></script>
+    <script src="confirm-link.js"></script>
 </head>
 <body>
     <!-- <template id="tooltip-template">
@@ -18,5 +19,7 @@
         are awesome!
     </p>
     <rn-tooltip></rn-tooltip>
+
+    <a is="rn-confirm-link" href="https://www.google.com">Google</a>
 </body>
 </html>
