--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <script src="modal.js"></script>
 </head>
 <body>
-    <rn-modal></rn-modal>
+    <rn-modal>
+        <p>With your confirmation you agree to pay the full amount!</p>
+    </rn-modal>
     <p>Please confirm your choice.</p>
     <button>Show Details & Confirm</button>
     <!-- <p>
